--- a/index.html
+++ b/index.html
@@ -3,13 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>arqu5</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Basic Website</title>
+    <style>
+        /* Basic styling for the body and headers */
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1, h2 {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to the arqu5 website</h1>
-    <button id="clickMe">Click Me</button>
+    <header>
+        <h1>Welcome to My Basic Website</h1>
+    </header>
 
-    <script src="script.js"></script>
+    <nav>
+        <!-- Basic navigation links -->
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section id="home">
+        <h2>Home</h2>
+        <p>This is the home page content. You can write about anything you want here.</p>
+    </section>
+
+    <section id="about">
+        <h2>About</h2>
+        <p>This section is about the website or its creator. Introduce yourself or the purpose of the website here.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>If you have any questions, feel free to reach out! Provide contact details or a form here.</p>
+    </section>
+
+    <footer>
+        <p>Copyright © 2023. All rights reserved.</p>
+    </footer>
 </body>
 </html>
