--- a/index.html
+++ b/index.html
@@ -3,50 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Website</title>
-    <style>
-        /* Basic styling for the body and headers */
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        h1, h2 {
-            color: #333;
-        }
-    </style>
+    <title>Freelance Programmer Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Basic Website</h1>
+        <h1>John Doe - Freelance Programmer</h1>
     </header>
-
+    
     <nav>
-        <!-- Basic navigation links -->
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+        <button onclick="showSection('about')">About Me</button>
+        <button onclick="showSection('projects')">Projects</button>
+        <button onclick="showSection('contact')">Contact</button>
     </nav>
-
-    <section id="home">
-        <h2>Home</h2>
-        <p>This is the home page content. You can write about anything you want here.</p>
+    
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Welcome to my portfolio. I'm a freelance programmer with expertise in...</p>
     </section>
 
-    <section id="about">
-        <h2>About</h2>
-        <p>This section is about the website or its creator. Introduce yourself or the purpose of the website here.</p>
+    <section id="projects">
+        <h2>Projects</h2>
+        <!-- Add your projects here -->
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
-        <p>If you have any questions, feel free to reach out! Provide contact details or a form here.</p>
+        <h2>Contact Me</h2>
+        <!-- Add contact details or a form here -->
     </section>
 
-    <footer>
-        <p>Copyright © 2023. All rights reserved.</p>
-    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
