--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
     <header>
-        <h1>John Doe - Freelance Programmer</h1>
+        <h1>arqus - Freelance Retard</h1>
     </header>
     
     <div class="container">
