--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                                     <line x1="5" x2="19" y1="15" y2="15"></line>
                                 </svg>
                             </span>
-                            <h2 class="text-sm font-semibold text-primary transform-gpu line-clamp-1">bytes032</h2>
+                            <h2 class="text-sm font-semibold text-primary transform-gpu line-clamp-1">arqu5</h2>
                         </span>
                     </div>
                     <div></div>
@@ -1040,14 +1040,14 @@
                         <h4 class="px-2 pt-5 pb-2 text-xs font-semibold text-gray-1000 text-opacity-40 dark:text-white">Online
                         </h4>
                         <li class="flex items-stretch space-x-1">
-                            <a target="_blank" rel="noopener noreferrer" class="flex flex-1 items-center space-x-3 rounded-md px-2 py-1.5 text-sm font-medium  text-gray-700 dark:text-gray-200 sm:hover:bg-gray-200 sm:hover:text-gray-900 sm:dark:hover:bg-gray-700 sm:dark:hover:text-gray-200" href="https://x.com/bytes032">
+                            <a target="_blank" rel="noopener noreferrer" class="flex flex-1 items-center space-x-3 rounded-md px-2 py-1.5 text-sm font-medium  text-gray-700 dark:text-gray-200 sm:hover:bg-gray-200 sm:hover:text-gray-900 sm:dark:hover:bg-gray-700 sm:dark:hover:text-gray-200" href="https://x.com/arqus">
                                 <span class="flex items-center justify-center w-4">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                                         <rect x="0" y="0" width="24" height="24" fill="none" stroke="none"></rect>
                                         <path fill="currentColor" d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584l-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"></path>
                                     </svg>
                                 </span>
-                                <span class="flex-1"></span>
+                                <span class="flex-1">Twitter</span>
                                 <span class="flex items-center justify-center w-4 text-black text-opacity-40 dark:text-white">
                                     <svg width="10" height="9" viewBox="0 0 10 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M9.00195 6.32617V0.824219C9.00195 0.490234 8.79102 0.267578 8.45117 0.267578L2.94922 0.279297C2.62109 0.279297 2.41016 0.519531 2.41016 0.794922C2.41016 1.07031 2.65039 1.30469 2.92578 1.30469H4.66602L7.45508 1.19922L6.39453 2.13672L1.16211 7.38086C1.05664 7.48633 0.998047 7.61523 0.998047 7.73828C0.998047 8.01367 1.24414 8.27734 1.53125 8.27734C1.66602 8.27734 1.78906 8.22461 1.89453 8.11914L7.13281 2.875L8.07617 1.81445L7.96484 4.48047V6.34961C7.96484 6.61914 8.19922 6.86523 8.48633 6.86523C8.76172 6.86523 9.00195 6.63672 9.00195 6.32617Z" fill="currentColor"></path>
@@ -1056,7 +1056,7 @@
                             </a>
                         </li>
                         <li class="flex items-stretch space-x-1">
-                            <a target="_blank" rel="noopener noreferrer" class="flex flex-1 items-center space-x-3 rounded-md px-2 py-1.5 text-sm font-medium  text-gray-700 dark:text-gray-200 sm:hover:bg-gray-200 sm:hover:text-gray-900 sm:dark:hover:bg-gray-700 sm:dark:hover:text-gray-200" href="https://github.com/bytes032">
+                            <a target="_blank" rel="noopener noreferrer" class="flex flex-1 items-center space-x-3 rounded-md px-2 py-1.5 text-sm font-medium  text-gray-700 dark:text-gray-200 sm:hover:bg-gray-200 sm:hover:text-gray-900 sm:dark:hover:bg-gray-700 sm:dark:hover:text-gray-200" href="https://github.com/arqu5">
                                 <span class="flex items-center justify-center w-4">
                                     <svg viewBox="0 0 17 16" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M8.06478 0C3.61133 0 0 3.6722 0 8.20248C0 11.8266 2.31081 14.9013 5.51518 15.9859C5.91823 16.0618 6.06622 15.808 6.06622 15.5913C6.06622 15.3957 6.05875 14.7496 6.05528 14.0642C3.81164 14.5604 3.3382 13.0963 3.3382 13.0963C2.97134 12.1483 2.44275 11.8961 2.44275 11.8961C1.71103 11.387 2.49791 11.3975 2.49791 11.3975C3.30775 11.4552 3.73417 12.2428 3.73417 12.2428C4.45347 13.4968 5.62083 13.1343 6.08103 12.9247C6.15342 12.3947 6.36245 12.0325 6.59305 11.8278C4.80178 11.6204 2.91872 10.9171 2.91872 7.77405C2.91872 6.87851 3.23377 6.14679 3.74966 5.57235C3.66593 5.36561 3.38987 4.53148 3.8278 3.40163C3.8278 3.40163 4.50501 3.18118 6.04619 4.24243C6.68951 4.0607 7.37942 3.96953 8.06478 3.96644C8.75018 3.96953 9.44062 4.0607 10.0851 4.24243C11.6244 3.18118 12.3007 3.40163 12.3007 3.40163C12.7397 4.53148 12.4635 5.36561 12.3798 5.57235C12.8969 6.14679 13.2098 6.87851 13.2098 7.77405C13.2098 10.9245 11.3231 11.6182 9.52728 11.8213C9.81657 12.0758 10.0743 12.575 10.0743 13.3403C10.0743 14.4377 10.065 15.321 10.065 15.5913C10.065 15.8096 10.2101 16.0653 10.6189 15.9848C13.8216 14.899 16.1294 11.8254 16.1294 8.20248C16.1294 3.6722 12.5187 0 8.06478 0Z"></path>
@@ -1070,25 +1070,7 @@
                                 </span>
                             </a>
                         </li>
-                        <li class="flex items-stretch space-x-1">
-                            <a target="_blank" rel="noopener noreferrer" class="flex flex-1 items-center space-x-3 rounded-md px-2 py-1.5 text-sm font-medium  text-gray-700 dark:text-gray-200 sm:hover:bg-gray-200 sm:hover:text-gray-900 sm:dark:hover:bg-gray-700 sm:dark:hover:text-gray-200" href="https://code4rena.com/@bytes032">
-                                <span class="flex items-center justify-center w-4">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" version="1" viewBox="0 0 256 256">
-                                        <path d="M1210 2433c-14-3-37-14-51-24-15-10-32-19-38-19s-11-4-11-9c0-4-28-28-62-52-35-24-67-47-73-51-85-66-115-88-120-88-3 0-11-4-18-10-57-46-76-60-85-60-5 0-12-7-16-15-3-8-12-15-21-15-8 0-15-3-15-7 0-5-21-21-48-38-26-16-49-32-52-35-9-9-69-50-75-50-3 0-33-19-68-43-34-24-84-56-112-72-27-15-61-41-75-56-28-30-30-37-120-474-11-55-27-130-35-166-23-104-20-174 10-226 25-42 123-122 580-471 66-51 131-100 145-111 93-71 149-114 172-134 109-87 251-111 387-64 38 13 106 49 152 80 75 50 312 231 429 327 24 19 93 75 154 123 225 179 259 210 294 268 25 41 30 126 11 192-5 21-16 70-24 110s-19 95-25 122c-5 28-17 82-25 120-66 313-58 295-169 370-33 22-64 44-71 50-6 5-18 15-28 20-18 11-152 103-240 164-31 23-61 41-66 41s-11 3-13 8c-1 4-32 27-67 50-104 71-126 87-129 95-2 4-9 7-15 8-7 0-39 20-72 44-110 81-140 95-207 100-35 2-74 1-88-2z" transform="matrix(.1 0 0 -.1 0 256)" fill="#7549ff"></path>
-                                    </svg>
-                                </span>
-                                <span class="flex-1">Code4rena</span>
-                                <span class="flex items-center justify-center w-4 text-black text-opacity-40 dark:text-white">
-                                    <svg width="10" height="9" viewBox="0 0 10 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M9.00195 6.32617V0.824219C9.00195 0.490234 8.79102 0.267578 8.45117 0.267578L2.94922 0.279297C2.62109 0.279297 2.41016 0.519531 2.41016 0.794922C2.41016 1.07031 2.65039 1.30469 2.92578 1.30469H4.66602L7.45508 1.19922L6.39453 2.13672L1.16211 7.38086C1.05664 7.48633 0.998047 7.61523 0.998047 7.73828C0.998047 8.01367 1.24414 8.27734 1.53125 8.27734C1.66602 8.27734 1.78906 8.22461 1.89453 8.11914L7.13281 2.875L8.07617 1.81445L7.96484 4.48047V6.34961C7.96484 6.61914 8.19922 6.86523 8.48633 6.86523C8.76172 6.86523 9.00195 6.63672 9.00195 6.32617Z" fill="currentColor"></path>
-                                    </svg>
-                                </span>
-                            </a>
-                        </li>
                     </ul>
-                </div>
-                <div data-cy="sign-in-button" class="sticky bottom-0 z-10 flex items-center justify-between p-2 space-x-3 bg-white border-t filter-blur border-gray-150 bg-opacity-80 dark:border-gray-800 dark:bg-gray-900 dark:bg-opacity-60">
-                    <button class="flex space-x-2 flex-none items-center justify-center cursor-pointer leading-none transition-all font-semibold px-4 py-2 text-sm opacity-100 rounded-md text-gray-700 hover:text-gray-1000 bg-gray-200 bg-opacity-0 hover:bg-opacity-100 dark:bg-gray-800 dark:text-gray-300 dark:hover:text-white" style="width: 100%;">Sign in</button>
                 </div>
             </nav>
             <div class="fixed inset-0 z-20 bg-black bg-opacity-10 transition duration-200 ease-in-out dark:bg-opacity-50 pointer-events-none opacity-0"></div>
@@ -1115,31 +1097,31 @@
                             </div>
                             <div class="intro_content__yXddD">
                                 <div class="intro_title__3v756">
-                                    <h1 class="intro_titleText__giBk4">I'm bytes032.</h1>
-                                    <h4 class="intro_subtitleText__pkAXW">An independent security researcher.</h4>
-                                    <p class="intro_descriptionText___jdWf">It is my mission to make protocols unbreakable and share everything I learn along the way.
+                                    <h1 class="intro_titleText__giBk4">I am arqus.</h1>
+                                    <h4 class="intro_subtitleText__pkAXW">I am retarded.</h4>
+                                    <p class="intro_descriptionText___jdWf">It is my mission to become not retarded and share everything I learn along the way.
                                     </p>
                                 </div>
                                 <div class="intro_cta__wXBaY">
                                     <div class="intro_ctaItem__c1rBb">
                                         <div class="intro_textContent__ZpWV8">
-                                            <div class="intro_itemTitle__KXdlK">Pay-per-vulnerability audits</div>
+                                            <div class="intro_itemTitle__KXdlK">You can pay me to help you not be so retarded.</div>
                                             <div class="intro_list__axSL0">
                                                 <div>Working with me, you get:</div>
                                                 <ul class="intro_listItemize__4Xu4b">
                                                     <li>
                                                         <p>
-                                                            <strong>Full visibility</strong> from start to finish
+                                                            <strong>Full visibility</strong> from start to finish.
                                                         </p>
                                                     </li>
                                                     <li>
                                                         <p>
-                                                            <strong>Only pay</strong> for the vulnerabilities found
+                                                            <strong>Only pay</strong> for the retarded parts of you that I un-retard.
                                                         </p>
                                                     </li>
                                                     <li>
                                                         <p>
-                                                            <strong>A high-quality, detailed and actionable</strong> review report
+                                                            <strong>A high-quality, detailed and actionable</strong> report on your retardedness.
                                                         </p>
                                                     </li>
                                                 </ul>
@@ -1153,17 +1135,17 @@
                                     </div>
                                     <div class="intro_ctaItem__c1rBb">
                                         <div class="intro_textContent__ZpWV8">
-                                            <div class="intro_itemTitle__KXdlK">Weekly insights you can digest in 5 minutes, at no cost.</div>
+                                            <div class="intro_itemTitle__KXdlK">Weekly retard insights you can digest in 5 minutes, at no cost.</div>
                                             <div class="intro_list__axSL0">
-                                                <div>Join 1K+ readers who subscribe for:</div>
+                                                <div>Join 0+ readers who subscribe for:</div>
                                                 <ul class="intro_listItemize__4Xu4b"><li>
-                                                    <p>Actionable security strategies</p>
+                                                    <p>Actionable retard strategies</p>
                                                 </li>
                                                 <li>
-                                                    <p>Practical advice</p>
+                                                    <p>Practical advice on not being a retard anymore</p>
                                                 </li>
                                                 <li>
-                                                    <p>Technical deep dives</p>
+                                                    <p>Retarded deep dives</p>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1186,7 +1168,7 @@
                             </div>
                         </div>
                         <div class="intro_testimonials__q0P1S">
-                            <h2 class="intro_title__3v756">What people say about my work</h2>
+                            <h2 class="intro_title__3v756">What people are saying about my work</h2>
                             <div class="intro_tweetsContent__HPjoB">
                                 <div class="senja-embed w-full" data-lazyload="false" data-id="e1e20686-5e43-4fc5-aac2-6d2fb83c4f1d" data-built="true"> 
                                     <div class="masked-overflow flex flex-col gap-4" style="--clr-background: #ffffff; --clr-primary: #6701E6; --clr-text: #374151; --clr-highlight: #ffcd3640; --padding: 16px; --clr-text-lt: hsla(217, 19%, 37%, 1); --clr-rating: #FBBF24; --font: DM Sans, system-ui, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, Oxygen, Ubuntu, Cantarell, &quot;Open Sans&quot;, &quot;Helvetica Neue&quot;, sans-serif; --border-width: 1px; --clr-border: hsla(0, 0%, 90%, 1); --border-radius: 0.5rem; --box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.07)">
@@ -1205,9 +1187,9 @@
                                                                                 </div> 
                                                                             </div> 
                                                                             <div class="w-full">
-                                                                                <div class="sj-endorser-name " style="">hexbyte</div> 
+                                                                                <div class="sj-endorser-name " style="">Oxbigdick</div> 
                                                                                 <div class="sj-desc ">
-                                                                                    <a class="" rel="nofollow" target="_blank" style="" href="https://twitter.com/0xhexbyte">@0xhexbyte
+                                                                                    <a class="" rel="nofollow" target="_blank" style="" href="https://twitter.com/0xbigdick">@0xbigdick
                                                                                     </a>
                                                                                 </div>
                                                                             </div>
@@ -1222,7 +1204,7 @@
                                                                         </div>
                                                                         <div class="sj-content text-left" style="opacity: 1;">
                                                                             <div>
-                                                                                <div style="overflow: hidden; display: -webkit-box; -webkit-line-clamp: 10; -moz-box-orient: vertical; transition: -webkit-line-clamp 0.5s ease-out 0s;">2/m I learned the most about any contract while writing the PoC's for the issue we found. Thanks to <a href="https://twitter.com/bytes032" target="_blank" rel="nofollow noopener noreferrer">@bytes032</a> for his advice and I would just want to pass that on - go head-on in audits. Step into the ring, let the urge to find issues in the contest drive your curiosity and,</div>
+                                                                                <div style="overflow: hidden; display: -webkit-box; -webkit-line-clamp: 10; -moz-box-orient: vertical; transition: -webkit-line-clamp 0.5s ease-out 0s;">What a fucking retard. <a href="https://twitter.com/arqus" target="_blank" rel="nofollow noopener noreferrer">@arqus</a> I hate you so fucking much.</div>
                                                                             </div>
                                                                         </div>  
                                                                     </div>
