--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
                                         </svg>
                                     </span>
 
-                                    <span class="flex-1">Newsletter</span>
+                                    <span class="flex-1">Retard Newsletter</span>
                                 </a>
 
                             </li>
@@ -986,7 +986,7 @@
                                             <path d="M2 12H22"></path>
                                         </svg>
                                     </span>
-                                    <span class="flex-1">Hire me</span>
+                                    <span class="flex-1">Hire a retard</span>
                                 </a>
                             </li>
                             <li class="flex items-stretch space-x-1">
@@ -996,7 +996,7 @@
                                             <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10"></path>
                                         </svg>
                                     </span>
-                                    <span class="flex-1">Audits</span>
+                                    <span class="flex-1">Retard Bookmarks</span>
                                 </a>
                             </li>
                         </ul>
@@ -1009,8 +1009,7 @@
                                             <path d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"></path>
                                         </svg>
                                     </span>
-                                    <span class="flex-1">Bookmarks
-                                    </span>
+                                    <span class="flex-1">Ask a Retard</span>
                                 </a>
                             </li>
                             <li class="flex items-stretch space-x-1">
@@ -1021,7 +1020,7 @@
                                             <path d="M18 9h2a2 2 0 0 1 2 2v11l-4-4h-6a2 2 0 0 1-2-2v-1"></path>
                                         </svg>
                                     </span>
-                                    <span class="flex-1">AMA</span>
+                                    <span class="flex-1">Retard Stack</span>
                                 </a>
                             </li>
                             <li class="flex items-stretch space-x-1">
@@ -1033,7 +1032,7 @@
                                             <rect width="18" height="12" x="3" y="10" rx="2"></rect>
                                         </svg>
                                     </span>
-                                    <span class="flex-1">Stack</span>
+                                    <span class="flex-1">Retard</span>
                                 </a>
                             </li>
                         </ul>
