--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <meta property="og:image:alt" content="arqu5">
         <meta property="og:locale" content="en_US">
         <meta property="og:site_name" content="arqu5">
-        <link rel="icon" href="/static/favicon.ico" sizes="any">
+        <link rel="icon" href="/static/favicon.png" sizes="any">
         <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
         <link rel="alternate" type="application/rss+xml" title="RSS feed" href="https://arqu5.com/newsletter/rss">
         <meta name="theme-color" content="rgb(23, 23, 23)" media="(prefers-color-scheme: dark)">
