flip white and black colors, attempt 1

--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
                     <div class="flex-1 px-3 py-3 space-y-1">
                         <ul class="space-y-1">
                             <li class="flex items-stretch space-x-1">
-                                <a class="flex flex-1 items-center space-x-3 rounded-md px-2 py-1.5 text-sm font-medium  bg-black text-white hover:bg-black hover:text-white dark:bg-gray-700 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white" href="/">
+                                <a class="flex flex-1 items-center space-x-3 rounded-md px-2 py-1.5 text-sm font-medium  bg-black text-black hover:bg-white hover:text-white dark:bg-gray-700 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white" href="/">
                                     <span class="flex items-center justify-center w-4">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-home">
                                             <path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
@@ -1046,7 +1046,7 @@
                                         </svg>
                                     </span>
                                     <span class="flex-1">Twitter</span>
-                                    <span class="flex items-center justify-center w-4 text-black text-opacity-40 dark:text-white">
+                                    <span class="flex items-center justify-center w-4 text-white text-opacity-40 dark:text-white">
                                         <svg width="10" height="9" viewBox="0 0 10 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M9.00195 6.32617V0.824219C9.00195 0.490234 8.79102 0.267578 8.45117 0.267578L2.94922 0.279297C2.62109 0.279297 2.41016 0.519531 2.41016 0.794922C2.41016 1.07031 2.65039 1.30469 2.92578 1.30469H4.66602L7.45508 1.19922L6.39453 2.13672L1.16211 7.38086C1.05664 7.48633 0.998047 7.61523 0.998047 7.73828C0.998047 8.01367 1.24414 8.27734 1.53125 8.27734C1.66602 8.27734 1.78906 8.22461 1.89453 8.11914L7.13281 2.875L8.07617 1.81445L7.96484 4.48047V6.34961C7.96484 6.61914 8.19922 6.86523 8.48633 6.86523C8.76172 6.86523 9.00195 6.63672 9.00195 6.32617Z" fill="currentColor"></path>
                                         </svg>
@@ -1061,7 +1061,7 @@
                                         </svg>
                                     </span>
                                     <span class="flex-1">GitHub</span>
-                                    <span class="flex items-center justify-center w-4 text-black text-opacity-40 dark:text-white">
+                                    <span class="flex items-center justify-center w-4 text-white text-opacity-40 dark:text-white">
                                         <svg width="10" height="9" viewBox="0 0 10 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M9.00195 6.32617V0.824219C9.00195 0.490234 8.79102 0.267578 8.45117 0.267578L2.94922 0.279297C2.62109 0.279297 2.41016 0.519531 2.41016 0.794922C2.41016 1.07031 2.65039 1.30469 2.92578 1.30469H4.66602L7.45508 1.19922L6.39453 2.13672L1.16211 7.38086C1.05664 7.48633 0.998047 7.61523 0.998047 7.73828C0.998047 8.01367 1.24414 8.27734 1.53125 8.27734C1.66602 8.27734 1.78906 8.22461 1.89453 8.11914L7.13281 2.875L8.07617 1.81445L7.96484 4.48047V6.34961C7.96484 6.61914 8.19922 6.86523 8.48633 6.86523C8.76172 6.86523 9.00195 6.63672 9.00195 6.32617Z" fill="currentColor"></path>
                                         </svg>
@@ -1071,10 +1071,10 @@
                         </ul>
                     </div>
                 </nav>
-            <div class="fixed inset-0 z-20 bg-black bg-opacity-10 transition duration-200 ease-in-out dark:bg-opacity-50 pointer-events-none opacity-0"></div>
+            <div class="fixed inset-0 z-20 bg-white bg-opacity-10 transition duration-200 ease-in-out dark:bg-opacity-50 pointer-events-none opacity-0"></div>
             <div class="flex w-full lg:w-[calc(100%-14rem)] pb-4 md:pb-8">
                 <div class="flex w-full">
-                    <div id="main" style="position:relative" class="relative flex max-h-screen w-full flex-col overflow-y-auto bg-white dark:bg-black intro_pageWrapper__BPiG0">
+                    <div id="main" style="position:relative" class="relative flex max-h-screen w-full flex-col overflow-y-auto bg-white dark:bg-white intro_pageWrapper__BPiG0">
                         <div style="background: rgba(255, 255, 255, 0.72); box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 0px; min-height: 48px;" class="filter-blur sticky top-0 z-10 flex flex-col justify-center px-3 py-2 dark:border-b dark:border-gray-900">
                             <div class="flex items-center justify-between flex-none">
                                 <span class="flex items-center space-x-3">
